# soothesayer

./: .gitignore  README.md  SoothSayer.py  app.py  config.py
backend/: .env  .env.example  GUI_FIX_SUMMARY.md  MOVEMENT_ANGLE_FIX.md  SoothSayer.py  app.py  groq_inference.py  pyproject.toml  run_soothsayer.py  test.py
backend/uploads/: audio_20250622_101835.m4a  audio_20250622_101840.m4a  audio_20250622_101846.m4a  audio_20250622_101852.m4a  audio_20250622_101858.m4a  audio_20250622_101903.m4a  audio_20250622_101909.m4a  audio_20250622_101915.m4a  audio_20250622_101921.m4a  audio_20250622_101926.m4a  audio_20250622_102728.m4a  audio_20250622_102734.m4a  audio_20250622_102739.m4a  audio_20250622_102745.m4a  audio_20250622_102751.m4a  audio_20250622_102757.m4a  audio_20250622_102802.m4a  audio_20250622_102808.m4a  audio_20250622_102813.m4a  audio_20250622_102819.m4a  audio_20250622_105412.m4a  audio_20250622_105417.m4a  audio_20250622_105423.m4a  audio_20250622_110657.m4a  audio_20250622_110707.m4a  audio_20250622_110718.m4a  audio_20250622_110727.m4a  audio_20250622_110737.m4a  audio_20250622_110752.m4a  audio_20250622_111451.m4a  audio_20250622_111516.m4a  audio_20250622_111526.m4a  audio_20250622_111537.m4a  audio_20250622_111547.m4a  audio_20250622_111558.m4a  audio_20250622_111615.m4a  audio_20250622_111634.m4a  audio_20250622_111649.m4a  audio_20250622_112707.m4a  audio_20250622_112717.m4a  (+2 more)
backend/uploads/audio/: audio_backup_20250621_235958.m4a  audio_backup_20250622_000003.m4a  audio_backup_20250622_000321.m4a  audio_backup_20250622_000324.m4a  (+45 more)
(+14 files in other folders)
